# PaperTrade

./: .env.example  .gitignore  QUICKSTART.md  README.md  README_TESTING.md  TESTING_CHECKLIST.md  TESTING_GUIDE.md  docker-compose.yml  pyproject.toml
scripts/: run_tests.sh
src/options_bot/: __init__.py  cli.py  config.py  logging_setup.py  time_utils.py
src/options_bot/db/: repo.py  schema.py
src/options_bot/ibkr/: __init__.py  combo_orders.py  connection.py  market_data.py  options_chain.py  positions.py
src/options_bot/services/: __init__.py  doctor.py  exporter.py  reporter.py  runner.py  scanner.py
src/options_bot/strategy/: __init__.py  manager.py  risk.py  selector.py
tests/: conftest.py  test_integration.py  test_manager_math.py  test_risk.py  test_safety.py  test_selector.py
