[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "options-bot"
version = "0.1.0"
description = "Production-quality options paper trading bot for Interactive Brokers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ib-insync>=0.9.86",
    "typer>=0.9.0",
    "sqlalchemy>=2.0.0",
    "python-dotenv>=1.0.0",
    "pytz>=2023.3",
]

[project.scripts]
bot = "options_bot.cli:app"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-mock>=3.12.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: marks tests as integration tests (require IB Gateway)",
]
addopts = "-v --tb=short"
